# spindle

./: Cargo.toml  README.md
benches/: filling_boxed_array.rs
examples/: 01-basic-range.rs  01-map.rs  02-i32-to-f64-map.rs  02-init.rs  02-range.rs  03-sum.rs
spindle_db/: .gitignore  Cargo.toml
spindle_db/.spindle/tests/: primitives.db
spindle_db/src/: display.rs  lib.rs  tables.rs
spindle_db/src/item_fn/: get_or_insert.rs  mod.rs  query.rs  tables.rs  test.rs
spindle_db/src/map/: iter.rs  mod.rs  test.rs
spindle_db/src/primitive/: mod.rs  test.rs
spindle_db/src/spindle_crate/: display.rs  mod.rs  test.rs
spindle_db/src/tag/: mod.rs  tables.rs
spindle_db/src/test/: mod.rs
spindle_db/src/union/: mod.rs  test.rs
spindle_macros/: Cargo.toml
spindle_macros/range/: Cargo.toml
spindle_macros/range/.cargo/: config.toml
spindle_macros/range/src/: lib.rs
spindle_macros/src/: error.rs  file_strings.rs  lib.rs  parse.rs
spindle_macros/src/basic_range/: mod.rs  parse.rs
spindle_macros/src/case/: mod.rs  parse.rs  test.rs
spindle_macros/src/db/: mod.rs
spindle_macros/src/dev_item_fn/: db.rs  debug.rs  mod.rs  parse.rs  test.rs  tokens.rs  try_from.rs
spindle_macros/src/device_tokens/: mod.rs  test.rs  try_from.rs
spindle_macros/src/fields/: mod.rs
spindle_macros/src/init/: db.rs  kernel.rs  launch.rs  mod.rs  parse.rs  test.rs  tokens.rs  try_from.rs
spindle_macros/src/map/: display.rs  in_out.rs  mod.rs  parse.rs  test.rs  tokens.rs
spindle_macros/src/map_fn/: db.rs  display.rs  mod.rs  parse.rs  test.rs  tokens.rs  try_from.rs
spindle_macros/src/maps/: attrs.rs  db.rs  in_out.rs  mod.rs
spindle_macros/src/primitives/: db.rs  mod.rs  parse.rs
spindle_macros/src/range/: mod.rs
spindle_macros/src/regulate/: ident.rs  item_fn.rs  mod.rs  pat_type.rs  return_type.rs  signature.rs
spindle_macros/src/spin/: compile.rs  error.rs  mod.rs  parse.rs  spindle_crate.rs  test.rs  tokens.rs
spindle_macros/src/spindles/: mod.rs
spindle_macros/src/tag/: mod.rs
spindle_macros/src/union/: foo.rs  mod.rs  test.rs  tokens.rs
spindle_macros/src/unions/: db.rs  mod.rs  parse.rs
src/: __cudarc.rs  __union.rs  error.rs  lib.rs
src/spindle/: error.rs  mod.rs  try_from.rs
src/union_slice/: mod.rs
