[package]
name = "spindle"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "A macro crate for ergonomic GPGPU data parallel computing."
repository = "https://github.com/ariasanovsky/spindle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cudarc = "0.9.12"
spindle_macros = { workspace = true }

[workspace]
members = ["spindle_macros"]

[workspace.dependencies]
spindle_macros = { version = "0.1.2", path = "spindle_macros" }
