[package]
name = "spindle"
version = "0.1.8"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Ergonomic GPGPU data parallel in Rust."
repository = "https://github.com/ariasanovsky/spindle"

[dependencies]
cudarc = "0.9.12"
spindle_macros = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
rayon = "1.7.0"

[workspace]
members = ["spindle_macros", "spindle_db"]

[workspace.dependencies]
spindle_macros = { version = "0.1.10", path = "spindle_macros" }

[[bench]]
name = "filling_boxed_array"
harness = false
